--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/list": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
+    "aos": "^3.0.0-beta.6",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
