--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fullcalendar/list": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.8.1",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
