--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
           ${{ secrets.FRONTEND_PROCESS_ENV }}
           EOF
 
+          # Firebase 설정 파일 생성
       - name: Install dependencies
         run: npm ci
 
